# rust-web-framework-examples

./: Cargo.toml  LICENSE  README.md  update.sh
.amazonq/rules/: review-rules.md
.github/: dependabot.yml
.github/workflows/: build.yml  configure.yml  dependabot-auto-merge.yml  oci.yml
actix-example/: .dockerignore  Cargo.toml  Dockerfile  README.md  run.sh
actix-example/src/: main.rs
axum-example/: Cargo.toml  Dockerfile  README.md
axum-example/src/: main.rs
rocket-example/: Cargo.toml  Dockerfile  README.md  run.sh
rocket-example/src/: main.rs
src/: main.rs
