[package]
name = "axum-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "^0.8.6"
serde = {version = "^1", features = ["derive"] }
serde_json = "^1"
tokio = { version = "^1", features = ["full"] }
tower-http = { version = "^0.6", features = ["cors"] }

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
# Install libssl-dev:arm64, see <https://github.com/cross-rs/cross/blob/main/docs/custom_images.md#adding-dependencies-to-existing-images>
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH", 
    "apt-get update -qqqqy && apt-get -qqqq --assume-yes install libssl-dev:$CROSS_DEB_ARCH"
]
